2004-02-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c: prop_exclude_list defined as a static hash. 

2004-02-14  Vincent Isambart <isambart@netcourrier.com>

	* src/lib/mkmf-gnome2.rb: replaced PLATFORM with RUBY_PLATFORM

2004-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_paramspecs.c: Fix a bug for GLib::Param::Flags.new. 

2003-12-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_object.c: Fix a typo. Pointed out by Kazuhiro NISHIYAMA.

2003-12-21  Kenichi Komiya <kom@mail1.accsnet.ne.jp>

	* src/rbgobj_object.c: Check when the first argument is nil or Hash.

2003-11-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: increment RBGLIB_MICRO_VERSION.

2003-11-15  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_enums.c: disable range checks.

	* sample/type-register.rb: call GLib::Object#notify when a
	property is updated.

	* src/rbgobj_signal.c: remove GLib::MetaInterface#signal_override
	and GLib::Instantiatable#signal_chain_from_overridden.

2003-11-10  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.c: remove duplication of #include <locale.h>.

2003-11-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_enums.c, rbgobject.h: Add G_RENAME_NICK.

2003-11-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>	

	* sample/type-register.rb: remove Japanese comments.

	* src/rbglib.h: increment RBGLIB_MINOR_VERSION.

	* src/rbgobj_object.c: do not depend on C99, Thanks to Hiroshi
	IGARASHI.

	* src/rbgobj_object.c: remove unnecessary #endif, Thanks to Nobuyoshi
	Nakada.

2003-11-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* sample/type-register.rb: add new file.

	* rename test/test-glib2.rb to tests/test-glib2.rb.

	* src/rbgobj_object.c: rename GLib::Object.register_type to
	type_register and change its arguments.

	* src/rbgobj_object.c, src/rbgobj_signal.c, src/global.h: enable
	subtyping codes by default.

2003-10-29  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
